fix: improve error handling and serverless compatibility for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,19 @@
 {
   "version": 2,
-  "functions": {
-    "src/server.js": {
-      "runtime": "vercel-node@latest"
-    }
-  },
-  "rewrites": [
+  "builds": [
     {
-      "source": "/api/(.*)",
-      "destination": "src/server.js"
+      "src": "src/server.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "src/server.js"
     },
     {
-      "source": "/((?!api/).*)",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
